movies are added

--- a/movie.html
+++ b/movie.html
@@ -11,6 +11,28 @@
       <li><a href="music.html">Music Recommendations</a></li>
     </ul>
 
-    
+    <h1>My Movie Recommendations</h1>
+
+    <section>
+      <h2>Top Picks</h2>
+      
+      <article>
+        <h3><i>Coach Carter</i></h3>
+        <img src="images/coachCarter.jpg" alt="Coach Carter movie poster">
+        <p>If you like sports, I recommend you to watch this master piece.</p>
+      </article>
+
+      <article>
+        <h3><i>Pixels</i></h3>
+        <img src="images/pixels.jpg" alt="Pixels movie poster">
+        <p>If you like arcade games, I recommend you to watch Pixels. You can watch it with your family. It is a warm-heating movie.</p>
+      </article>
+
+      <article>
+        <h3><i>Cars</i></h3>
+        <img src="images/cars.jpeg" alt="Cars movie poster">
+        <p>Your age does not matter at all. You have to watch this!!!!!</p>
+      </article>
+    </section>
   </body>
 </html>
