music links added

--- a/music.html
+++ b/music.html
@@ -11,6 +11,55 @@
       <li><a href="music.html">Music Recommendations</a></li>
     </ul>
 
-    
+    <h1>Music Recommendations</h1>
+
+    <section>
+      <h2>Current Favorites</h2>
+
+      <article>
+        <h3>Big In Japan Baglama</h3>
+        <iframe 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/1ZCCYiJBcHk?si=dzOUVc3GentC1Vxk" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+        </iframe>
+        <p>A unique fusion of traditional Turkish baglama with the famous "Big in Japan" by Alphaville. This creative cover demonstrates how traditional instruments can reimagine modern classics, creating a beautiful bridge between Eastern and Western music styles.</p>
+      </article>
+
+      <article>
+        <h3>Election Song</h3>
+        <iframe 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/wOVMvmNugM4?si=QONS5B8duy6gBdVo" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+        </iframe>
+        <p>An iconic Turkish election campaign song that has become a cultural phenomenon. Known for its catchy rhythm and memorable melody, this song showcases the unique intersection of music and political culture in Turkey. Its popularity has transcended its original purpose to become a widely recognized piece of modern Turkish pop culture.</p>
+      </article>
+
+      <article>
+        <h3>Lapsekili Masterpiece</h3>
+        <iframe 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/A23xx0O1jso?si=dyNYMjOMwb0UZjvK" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+        </iframe>
+        <p>A remarkable example of Turkish folk music from the Lapseki region. This performance captures the essence of traditional Turkish musical storytelling, featuring intricate instrumental work and powerful vocal delivery. The song represents the rich cultural heritage of the Çanakkale province and its distinctive musical traditions.</p>
+      </article>
+    </section>
   </body>
 </html>
