ibdm links added

--- a/movie.html
+++ b/movie.html
@@ -20,18 +20,21 @@
         <h3><i>Coach Carter</i></h3>
         <img src="images/coachCarter.jpg" alt="Coach Carter movie poster">
         <p>If you like sports, I recommend you to watch this master piece.</p>
+        <p>IMDb: <a href="https://www.imdb.com/title/tt0393162/">Coach Carter (2005)</a></p>
       </article>
 
       <article>
         <h3><i>Pixels</i></h3>
         <img src="images/pixels.jpg" alt="Pixels movie poster">
         <p>If you like arcade games, I recommend you to watch Pixels. You can watch it with your family. It is a warm-heating movie.</p>
+        <p>IMDb: <a href="https://www.imdb.com/title/tt2120120/">Pixels (2015)</a></p>
       </article>
 
       <article>
         <h3><i>Cars</i></h3>
         <img src="images/cars.jpeg" alt="Cars movie poster">
         <p>Your age does not matter at all. You have to watch this!!!!!</p>
+        <p>IMDb: <a href="https://www.imdb.com/title/tt0317219/">Cars (2006)</a></p>
       </article>
     </section>
   </body>
