--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="index.html">My Resume</a></li>
+      <li><a href="index.html">Resume</a></li>
       <li><a href="movie.html">Movie Recommendations</a></li>
       <li><a href="music.html">Music Recommendations</a></li>
     </ul>
